force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <description>These are partners to Paychex, that generally send or receive referrals.</description>
    <label>Partner</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>