force-app/main/default/objects/Partner__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <formula>IF ( CONTAINS( Name , &apos; - Parent&apos;), LEFT (Name, LEN(Name)-9)
  , If ( ParentPartner__c != null &amp;&amp; FIND(&apos; - &apos;,Name)&gt;0, RIGHT(Name, LEN(Name)-FIND(&apos; - &apos;,Name)-2), Name))</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>