force-app/main/default/objects/Partner__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The End Date of the referral record</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>