force-app/main/default/objects/Partner__c/fields/PartnerDetail__c.field-meta.xml
<CustomField>
    <fullName>PartnerDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the Partner Detail record</inlineHelpText>
    <label>Partner Detail</label>
    <referenceTo>PartnerDetail__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>