force-app/main/default/objects/Partner__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The unique id that represents the &quot;parent&quot; of the partner.</inlineHelpText>
    <label>Vendor Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>