force-app/main/default/objects/Partner__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>