force-app/main/default/objects/Partner__c/fields/VendorURLInternal__c.field-meta.xml
<CustomField>
    <fullName>VendorURLInternal__c</fullName>
    <formula>IF (ParentPartner__c != null
, IF (NOT(ISBLANK(ParentPartner__r.Account__r.Mirror_Referral_Account__r.VendorInternalURLCustom__c))
         ,ParentPartner__r.Account__r.Mirror_Referral_Account__r.VendorInternalURLCustom__c
         ,ParentPartner__r.Account__r.Mirror_Referral_Account__r.VendorInternalURL__c)
, IF (NOT(ISBLANK(Account__r.Mirror_Referral_Account__r.VendorInternalURLCustom__c))
         ,Account__r.Mirror_Referral_Account__r.VendorInternalURLCustom__c
         ,Account__r.Mirror_Referral_Account__r.VendorInternalURL__c ))</formula>
    <inlineHelpText>The URL for the Internal facing partner web form</inlineHelpText>
    <label>Vendor URL-Internal</label>
    <type>Text</type>
</CustomField>