force-app/main/default/objects/Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>PartnerId__c</columns>
    <columns>ParentPartner__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>