force-app/main/default/objects/Partner__c/listViews/By_Display_Name.listView-meta.xml
<ListView>
    <fullName>By_Display_Name</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ParentPartner__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DisplayName__c</field>
        <operation>equals</operation>
        <value>South Windsor</value>
    </filters>
    <label>By Display Name</label>
</ListView>