force-app/main/default/objects/Partner__c/listViews/cmf_view.listView-meta.xml
<ListView>
    <fullName>cmf_view</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>PartnerId__c</columns>
    <columns>ParentPartner__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Ornl Federal Credit Union</value>
    </filters>
    <label>cmf view</label>
</ListView>